--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "colart",
   "version": "0.0.1",
   "scripts": {
-    "start": "svelte-kit dev",
+    "start": "svelte-kit dev --host 3000",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
     "@sveltejs/adapter-netlify": "^1.0.0-next.32",
     "@sveltejs/kit": "next",
-    "svelte": "^3.42.6"
+    "sass": "^1.42.1",
+    "svelte": "^3.42.6",
+    "svelte-preprocess": "^4.9.8"
   },
   "type": "module"
 }
