--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "svelte": "^3.42.6",
     "svelte-preprocess": "^4.9.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "locomotive-scroll": "^4.1.2"
+  }
 }
