--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "devDependencies": {
     "@sveltejs/adapter-netlify": "^1.0.0-next.32",
     "@sveltejs/kit": "next",
+    "locomotive-scroll": "^4.1.2",
     "sass": "^1.42.1",
     "svelte": "^3.42.6",
     "svelte-preprocess": "^4.9.8"
   },
-  "type": "module",
-  "dependencies": {
-    "locomotive-scroll": "^4.1.2"
-  }
+  "type": "module"
 }
